--- a/education.html
+++ b/education.html
@@ -25,11 +25,11 @@
 </div>
 <h2>Stanford University</h2>
 <ul>
-<li><p>Ph.D.: Civil and Environmental Engineering (06/2013 &ndash; 01/2018)</p>
+<li><p>Ph.D.: Civil and Environmental Engineering (09/2013 &ndash; 09/2018)</p>
 <ul>
-<li><p>Thesis: Sequential Infrastructural Health Monitoring: Statistical Model and Applications</p>
+<li><p>Thesis: Integrated Infrastructure Health Monitoring: Detection, Estimation, and Learning</p>
 </li>
-<li><p>Area: Statistical Learning, Structural Health Monitoring, and Power Systems</p>
+<li><p>Area: Statistical Learning, Structural Health Monitoring, and Distributed Power Systems</p>
 </li>
 <li><p>Advisor: <a href="http://web.stanford.edu/~ramr">Dr. Ram Rajagopal</a></p>
 </li>
@@ -83,7 +83,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2017-10-02 21:16:21 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2018-12-15 16:08:52 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
