--- a/index.html
+++ b/index.html
@@ -23,41 +23,40 @@
 <div id="toptitle">
 <h1>Yizheng Liao</h1>
 </div>
-<p>I am the Leavell Fellow and a Ph.D. candidate in the <a href="http://cee.stanford.edu/">Civil and Environmental Engineering Department</a> at
-<a href="http://www.stanford.edu/">Stanford University</a>. Currently, I am working with <a href="http://web.stanford.edu/~ramr/">Prof. Ram Rajagopal</a> and Prof. Anne Kiremidjian.
-Before studying at Stanford University, I received the M.S. degree and B.S. degree, both in Electrical and Computer Engineering, from
-<a href="http://www.wpi.edu/">Worcester Polytechnic Institute</a> in 2011.</p>
+<p>I am a Visiting Scholar in the <a href="http://cee.stanford.edu/">Department of Civil and Environmental Engineering</a> at
+<a href="http://www.stanford.edu/">Stanford University</a>. Also, I am a Data Scientist (Machine Learnings Track) at Airbnb. At Stanford, I am working with <a href="http://web.stanford.edu/~ramr/">Prof. Ram Rajagopal</a> and <a href="https://profiles.stanford.edu/anne-kiremidjian">Prof. Anne S. Kiremidjian</a>.</p>
 <h2>Research Interest</h2>
 <ul>
-<li><p>Statistical Learning and Data Analytics</p>
+<li><p>Urban System and Infrastructure System</p>
 </li>
-<li><p>Statistical and Graphical Model</p>
+<li><p>Machine Learnings and Statistical Learnings</p>
 </li>
-<li><p>Wireless Sensor Network</p>
+<li><p>Wireless Sensor Networks</p>
 </li>
-<li><p>Structural Health Monitoring</p>
+<li><p>Infrastructural Health Monitoring</p>
 </li>
-<li><p>Smart Grid</p>
+<li><p>Distribution Power Systems</p>
 </li>
 <li><p>Change Point Detection</p>
 </li>
 </ul>
 <h2>Recent News</h2>
 <ul>
-<li><p><b>September 2017</b>: We present our papers &ldquo;Experimental validation of an improved dynamic displacement estimation method using combined accelerometer and gyroscope sensors&rdquo; and &ldquo;Use of Time-frequency Damage Sensitive Features for Structural Damage Diagnosis&rdquo; in International Workshop of Structural Health Monitoring (IWSHM 2017) at Stanford, CA.</p>
+<li><p><b>September 2018</b>: Our paper &ldquo;Urban MV and LV Distribution Grid Topology Estimation via Group Lasso&rdquo; has been accepted by IEEE Transacations on Power Systems.</p>
 </li>
-<li><p><b>June 2017</b>: Our paper &ldquo;Experimental Validation of an Improved Dynamic Displacement Estimation Method using Accelerometer and Gyroscope&rdquo; has been accepted by 2017 International Workshop on Structural Health Monitoring (IWSHM). </p>
+<li><p><b>September 2018</b>: Our paper &ldquo;Structural Damage Detection and Localization with Unknown Post-Damage Feature Distribution Using Sequential Change-Point Detection Method&rdquo; has been accepted by ASCE Journal of Aerospace Engineering.</p>
 </li>
-<li><p><b>June 2017</b>: I have passed my Ph.D. dissertation oral exam.</p>
-</li>
-<li><p><b>December 2016</b>: Our paper &ldquo;Distributed Energy Resources Connectivity Identification via Graphical Modeling&rdquo; has been accepted by IEEE Transacations on Power Systems.</p>
+<li><p><b>September 2017</b>: We present our papers &ldquo;Experimental validation of an improved dynamic displacement estimation method using combined accelerometer and gyroscope sensors&rdquo; and &ldquo;Use of Time-frequency Damage Sensitive Features for Structural Damage Diagnosis&rdquo; in International Workshop of Structural Health Monitoring (IWSHM 2017) at Stanford, CA.
+
+
+</p>
 </li>
 </ul>
 <h2>Contact</h2>
 <p>Email: <a href="mailto:yzliao@stanford.edu">yzliao@stanford.edu</a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2017-10-02 21:16:21 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2018-12-15 16:08:52 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
