--- a/research.html
+++ b/research.html
@@ -26,22 +26,24 @@
 <h2>Publications</h2>
 <h3>Working Paper</h3>
 <ul>
-<li><p><b>Y. Liao</b>, R. Rajagopal, &ldquo;Sequential Multiple Structural Damage Detection and Localization: A Graphical Model Approach&rdquo;.</p>
-</li>
-<li><p><b>Y. Liao</b>, Y. Weng, R. Rajagopal, &ldquo;Distribution Grid Topology Error Processing&rdquo;.</p>
-</li>
 <li><p><b>Y. Liao</b>, Y. Weng, R. Rajagopal, &ldquo;Line Parameter Estimation in Urban Secondary Distribution Grid via Two-Stage Grouping&rdquo;.</p>
 </li>
 </ul>
 <h3>Journal</h3>
 <ul>
-<li><p><b>Y. Liao</b>, A.S. Kiremidjian, R. Rajagopal, C.H. Loh, &ldquo;Structural Damage Detection and Localization with Unknown Post-Damage Feature Distribution Using Sequential Change-Point Detection Method&rdquo;, <i>ASCE Journal of Journal of Aerospace Engineering</i>, submitted.</p>
+<li><p><b>Y. Liao</b>, R. Rajagopal, &ldquo;<a href="pub/change_point.pdf">Sequential Multiple Structural Damage Detection and Localization: A Distributed Approach</a>&rdquo;, <i>Structural Health Monitoring</i>, submitted.</p>
 </li>
-<li><p><b>Y. Liao</b>, Y. Weng, R. Rajagopal, &ldquo;Urban MV and LV Distribution Grid Topology Estimation via Group Lasso&rdquo;, <i>IEEE Transactions on Power Systems</i>, in revision. [ <a href="pub/TPS_lasso.pdf">Preprint</a> ]</p>
+<li><p><b>Y. Liao</b>, Y. Weng, C-W. Tan, R. Rajagopal, &ldquo;<a href="pub/TSG_outage.pdf">Fast Distribution Grid Line Outage Identification with <img class="eq" src="eqs/7083357291911388125-130.png" alt="mu" style="vertical-align: -4px" />PMU</a>&rdquo;, <i>IEEE Transactions on Smart Grid: Special Section on Theory and Application of PMUs in Power Distribution Systems</i>, submitted.</p>
 </li>
-<li><p>Y. Weng, <b>Y. Liao</b>, R. Rajagopal, &ldquo;<a href="pub/TPS_info.pdf">Distributed Energy Resources Connectivity Identification via Graphical Modeling</a>&rdquo;, <i>IEEE Transactions on Power Systems</i>.</p>
+<li><p><b>Y. Liao</b>, Y. Weng, G. Liu, Z. Zhao, C-W. Tan, R. Rajagopal, &ldquo;<a href="pub/IET_unbalance_three_phase.pdf">Unbalanced Three-Phase Distribution Grid Topology Estimation and Bus Phase Identification</a>&rdquo;, <i>IET Smart Grid</i>, submitted.</p>
 </li>
-<li><p><b>Y. Liao</b>, M. Mollineaux, R. Hsu, R. Bartlett, A. Singla, A. Raja, R. Bajwa, R. Rajagopal, &ldquo;<a href="pub/snowfort.pdf">SnowFort: An open source wireless sensor network for data analytics in infrastructure and environmental monitoring</a>&rdquo;, <i>IEEE Sensors Journal: Special Issue on Sensing Technologies for Intelligent Urban Infrastructures</i>, 14(12): 4253 &ndash; 4263, December 2014.</p>
+<li><p><b>Y. Liao</b>, A.S. Kiremidjian, R. Rajagopal, C.H. Loh, &ldquo;<a href="pub/ASCE.pdf">Structural Damage Detection and Localization with Unknown Post-Damage Feature Distribution Using Sequential Change-Point Detection Method</a>&rdquo;, <i>ASCE Journal of Aerospace Engineering</i>, 32(2): 04018149, 2018, DOI: 10.1061/(ASCE)AS.1943-5525.0000979.</p>
+</li>
+<li><p><b>Y. Liao</b>, Y. Weng, R. Rajagopal, &ldquo;<a href="pub/TPS_lasso.pdf">Urban MV and LV Distribution Grid Topology Estimation via Group Lasso</a>&rdquo;, <i>IEEE Transactions on Power Systems</i>, September 2018, DOI: 10.1109/TPWRS.2018.2868877.</p>
+</li>
+<li><p>Y. Weng, <b>Y. Liao</b>, R. Rajagopal, &ldquo;<a href="pub/TPS_info.pdf">Distributed Energy Resources Connectivity Identification via Graphical Modeling</a>&rdquo;, <i>IEEE Transactions on Power Systems</i>, 32(4): 2682-2694, July 2017.</p>
+</li>
+<li><p><b>Y. Liao</b>, M. Mollineaux, R. Hsu, R. Bartlett, A. Singla, A. Raja, R. Bajwa, R. Rajagopal, &ldquo;<a href="pub/snowfort.pdf">SnowFort: An open source wireless sensor network for data analytics in infrastructure and environmental monitoring</a>&rdquo;, <i>IEEE Sensors Journal: Special Issue on Sensing Technologies for Intelligent Urban Infrastructures</i>, 14(12): 4253-4263, December 2014.</p>
 </li>
 </ul>
 <h3>Conference</h3>
@@ -98,13 +100,21 @@
 </ul>
 <h2>Academic Services</h2>
 <ul>
-<li><p>Reviewer, IEEE Trans. on Smart Grid</p>
+<li><p>Reviewer, Applied Energy</p>
+</li>
+<li><p>Reviewer, IEEE Industrial Electronics</p>
+</li>
+<li><p>Reviewer, IEEE Intelligent Transportation Systems</p>
 </li>
 <li><p>Reviewer, IEEE Sensors Journal</p>
 </li>
+<li><p>Reviewer, IEEE Transactions on Smart Grid</p>
+</li>
+<li><p>Reivewer, IEEE Transactions on Sustainable Energy</p>
+</li>
 <li><p>Reviewer, Structural Health Monitoring</p>
 </li>
-<li><p>Reviewer, Telecommunication Computing Electronics and Control (TELKOMNIKA)</p>
+<li><p>Reviewer, IEEE International Conference on Communications, Controls, and Computing Technology for Smart Grids (IEEE SmartGridComm) at Aalborg, Denmark, Octomber 2018</p>
 </li>
 <li><p>Reviewer, IEEE Power Energy Society General Meeting (PES-GM) at Boston, MA, July 2016</p>
 </li>
@@ -113,7 +123,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2017-10-02 21:16:21 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2018-12-15 16:08:53 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
