--- a/coursework.html
+++ b/coursework.html
@@ -43,7 +43,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2017-10-02 21:16:22 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2018-12-15 16:08:53 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
