--- a/project.html
+++ b/project.html
@@ -58,7 +58,7 @@ of No-Prop is simpler than that of Back Propagation (Back-Prop) model. In additi
 <p>[<a href="https://github.com/yzliao/NPNetwork/">Github Repo</a>] [<a href="http://linkinghub.elsevier.com/retrieve/pii/S0893-6080(12)00261-4">Paper</a>]</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2017-10-02 21:16:21 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2018-12-15 16:08:53 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
