--- a/education.html
+++ b/education.html
@@ -83,7 +83,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-12-15 16:08:52 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2019-10-26 07:51:19 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
