--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 <h1>Yizheng Liao</h1>
 </div>
 <p>I am a Visiting Scholar in the <a href="http://cee.stanford.edu/">Department of Civil and Environmental Engineering</a> at
-<a href="http://www.stanford.edu/">Stanford University</a>. Also, I am a Data Scientist (Machine Learnings Track) at Airbnb. At Stanford, I am working with <a href="http://web.stanford.edu/~ramr/">Prof. Ram Rajagopal</a> and <a href="https://profiles.stanford.edu/anne-kiremidjian">Prof. Anne S. Kiremidjian</a>.</p>
+<a href="http://www.stanford.edu/">Stanford University</a>. Also, I am a Data Scientist working on Search and Knolwedge Graph at Airbnb. At Stanford, I am working with <a href="http://web.stanford.edu/~ramr/">Prof. Ram Rajagopal</a> and <a href="https://profiles.stanford.edu/anne-kiremidjian">Prof. Anne S. Kiremidjian</a>.</p>
 <h2>Research Interest</h2>
 <ul>
 <li><p>Urban System and Infrastructure System</p>
 </li>
-<li><p>Machine Learnings and Statistical Learnings</p>
+<li><p>Statistical Learnings</p>
 </li>
 <li><p>Wireless Sensor Networks</p>
 </li>
@@ -42,21 +42,24 @@
 </ul>
 <h2>Recent News</h2>
 <ul>
+<li><p><b>October 2019</b>: Our paper &ldquo;Application of Vibration-based Damage Detection Algorithms to
+Experimental Data from Multi-story Steel Structures&rdquo; has been accepted by the International Journal of Sustainable Materials and Structural Systems.</p>
+</li>
+<li><p><b>July 2019</b>: Our paper &ldquo;Unbalanced Multi-Phase Distribution Grid Topology Estimation and Bus Phase Identification&rdquo; has been accepted by IET Smart Grid.</p>
+</li>
+<li><p><b>October 2019</b>: Our paper &ldquo;Application of Vibration-based Damage Detection Algorithms to
+Experimental Data from Multi-story Steel Structures&rdquo; has been accepted by the International Journal of Sustainable Materials and Structural Systems.</p>
+</li>
 <li><p><b>September 2018</b>: Our paper &ldquo;Urban MV and LV Distribution Grid Topology Estimation via Group Lasso&rdquo; has been accepted by IEEE Transacations on Power Systems.</p>
 </li>
 <li><p><b>September 2018</b>: Our paper &ldquo;Structural Damage Detection and Localization with Unknown Post-Damage Feature Distribution Using Sequential Change-Point Detection Method&rdquo; has been accepted by ASCE Journal of Aerospace Engineering.</p>
-</li>
-<li><p><b>September 2017</b>: We present our papers &ldquo;Experimental validation of an improved dynamic displacement estimation method using combined accelerometer and gyroscope sensors&rdquo; and &ldquo;Use of Time-frequency Damage Sensitive Features for Structural Damage Diagnosis&rdquo; in International Workshop of Structural Health Monitoring (IWSHM 2017) at Stanford, CA.
-
-
-</p>
 </li>
 </ul>
 <h2>Contact</h2>
 <p>Email: <a href="mailto:yzliao@stanford.edu">yzliao@stanford.edu</a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-12-15 16:08:52 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2019-10-26 07:51:19 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
