--- a/research.html
+++ b/research.html
@@ -24,18 +24,21 @@
 <h1>Publications and Talks</h1>
 </div>
 <h2>Publications</h2>
-<h3>Working Paper</h3>
+<h3>Submitted and Working Manuscripts</h3>
 <ul>
 <li><p><b>Y. Liao</b>, Y. Weng, R. Rajagopal, &ldquo;Line Parameter Estimation in Urban Secondary Distribution Grid via Two-Stage Grouping&rdquo;.</p>
 </li>
-</ul>
-<h3>Journal</h3>
-<ul>
 <li><p><b>Y. Liao</b>, R. Rajagopal, &ldquo;<a href="pub/change_point.pdf">Sequential Multiple Structural Damage Detection and Localization: A Distributed Approach</a>&rdquo;, <i>Structural Health Monitoring</i>, submitted.</p>
 </li>
 <li><p><b>Y. Liao</b>, Y. Weng, C-W. Tan, R. Rajagopal, &ldquo;<a href="pub/TSG_outage.pdf">Fast Distribution Grid Line Outage Identification with <img class="eq" src="eqs/7083357291911388125-130.png" alt="mu" style="vertical-align: -4px" />PMU</a>&rdquo;, <i>IEEE Transactions on Smart Grid: Special Section on Theory and Application of PMUs in Power Distribution Systems</i>, submitted.</p>
 </li>
-<li><p><b>Y. Liao</b>, Y. Weng, G. Liu, Z. Zhao, C-W. Tan, R. Rajagopal, &ldquo;<a href="pub/IET_unbalance_three_phase.pdf">Unbalanced Three-Phase Distribution Grid Topology Estimation and Bus Phase Identification</a>&rdquo;, <i>IET Smart Grid</i>, submitted.</p>
+</ul>
+<h3>Journal</h3>
+<ul>
+<li><p><b>Y. Liao</b>, A.S. Kiremidjian, R. Rajagopal, C.H. Loh, &ldquo;<a href="pub/IJSMSS.pdf">Application of Vibration-based Damage Detection Algorithms to
+Experimental Data from Multi-story Steel Structures</a>&rdquo;, <i>International Journal of Sustainable Materials and Structural Systems, Speicial Issue: Smart Structures, Structural Control and Health Monitoring – A Special Issue in Honour of Professor Fabio Casciati and Professor Lucia Faravelli</i>, accepted.</p>
+</li>
+<li><p><b>Y. Liao</b>, Y. Weng, G. Liu, Z. Zhao, C-W. Tan, R. Rajagopal, &ldquo;<a href="pub/IET_three_phase.pdf">Unbalanced Multi-Phase Distribution Grid Topology Estimation and Bus Phase Identification</a>&rdquo;, <i>IET Smart Grid</i>, DOI: 10.1049/iet-stg.2018.0291.</p>
 </li>
 <li><p><b>Y. Liao</b>, A.S. Kiremidjian, R. Rajagopal, C.H. Loh, &ldquo;<a href="pub/ASCE.pdf">Structural Damage Detection and Localization with Unknown Post-Damage Feature Distribution Using Sequential Change-Point Detection Method</a>&rdquo;, <i>ASCE Journal of Aerospace Engineering</i>, 32(2): 04018149, 2018, DOI: 10.1061/(ASCE)AS.1943-5525.0000979.</p>
 </li>
@@ -123,7 +126,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-12-15 16:08:53 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2019-10-26 07:51:20 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
