--- a/research.html
+++ b/research.html
@@ -23,22 +23,18 @@
 <div id="toptitle">
 <h1>Publications and Talks</h1>
 </div>
+<p><a href="https://scholar.google.com/citations?hl=en&amp;user=1qA9DswAAAAJ&amp;view_op=list_works">Google Scholar</a></p>
 <h2>Publications</h2>
-<h3>Submitted and Working Manuscripts</h3>
-<ul>
-<li><p><b>Y. Liao</b>, Y. Weng, R. Rajagopal, &ldquo;Line Parameter Estimation in Urban Secondary Distribution Grid via Two-Stage Grouping&rdquo;.</p>
-</li>
-<li><p><b>Y. Liao</b>, R. Rajagopal, &ldquo;<a href="pub/change_point.pdf">Sequential Multiple Structural Damage Detection and Localization: A Distributed Approach</a>&rdquo;, <i>Structural Health Monitoring</i>, submitted.</p>
-</li>
-<li><p><b>Y. Liao</b>, Y. Weng, C-W. Tan, R. Rajagopal, &ldquo;<a href="pub/TSG_outage.pdf">Fast Distribution Grid Line Outage Identification with <img class="eq" src="eqs/7083357291911388125-130.png" alt="mu" style="vertical-align: -4px" />PMU</a>&rdquo;, <i>IEEE Transactions on Smart Grid: Special Section on Theory and Application of PMUs in Power Distribution Systems</i>, submitted.</p>
-</li>
-</ul>
 <h3>Journal</h3>
 <ul>
+<li><p><b>Y. Liao</b>, Y. Weng, C.W. Tan, R. Rajagopal, &ldquo;<a href="pub/CSEE_outage.pdf">Quick Line Outage Identification in Urban Distribution Grids via Smart Meters</a>&rdquo;, <i>CSEE Journal of Power and Energy Systems</i>, accepted, 2021.</p>
+</li>
+<li><p>H. Li, Y. Weng, <b>Y. Liao</b>, B. Keel, K. E. Brown, &ldquo;<a href="pub/2021IJPES-Top.pdf">Distribution grid impedance &amp; topology estimation with limited or no micro-PMUs</a>&rdquo;, <i>International Journal of Electrical Power &amp; Energy Systems</i>, 129: 106794, 2021, DOI: 10.1016/j.ijepes.2021.106794.</p>
+</li>
 <li><p><b>Y. Liao</b>, A.S. Kiremidjian, R. Rajagopal, C.H. Loh, &ldquo;<a href="pub/IJSMSS.pdf">Application of Vibration-based Damage Detection Algorithms to
 Experimental Data from Multi-story Steel Structures</a>&rdquo;, <i>International Journal of Sustainable Materials and Structural Systems, Speicial Issue: Smart Structures, Structural Control and Health Monitoring – A Special Issue in Honour of Professor Fabio Casciati and Professor Lucia Faravelli</i>, accepted.</p>
 </li>
-<li><p><b>Y. Liao</b>, Y. Weng, G. Liu, Z. Zhao, C-W. Tan, R. Rajagopal, &ldquo;<a href="pub/IET_three_phase.pdf">Unbalanced Multi-Phase Distribution Grid Topology Estimation and Bus Phase Identification</a>&rdquo;, <i>IET Smart Grid</i>, DOI: 10.1049/iet-stg.2018.0291.</p>
+<li><p><b>Y. Liao</b>, Y. Weng, G. Liu, Z. Zhao, C.W. Tan, R. Rajagopal, &ldquo;<a href="pub/IET_three_phase.pdf">Unbalanced Multi-Phase Distribution Grid Topology Estimation and Bus Phase Identification</a>&rdquo;, <i>IET Smart Grid</i>, 2: 557-570, 2019, DOI: 10.1049/iet-stg.2018.0291.</p>
 </li>
 <li><p><b>Y. Liao</b>, A.S. Kiremidjian, R. Rajagopal, C.H. Loh, &ldquo;<a href="pub/ASCE.pdf">Structural Damage Detection and Localization with Unknown Post-Damage Feature Distribution Using Sequential Change-Point Detection Method</a>&rdquo;, <i>ASCE Journal of Aerospace Engineering</i>, 32(2): 04018149, 2018, DOI: 10.1061/(ASCE)AS.1943-5525.0000979.</p>
 </li>
@@ -101,32 +97,42 @@ Experimental Data from Multi-story Steel Structures</a>&rdquo;, <i>International
 <li><p><b>Y. Liao</b>, &ldquo;<a href="pub/Liao_TECHREPORT_2010.pdf">A study of maximum likelihood estimation with non-linear iterative method</a>&rdquo;, August 2010.</p>
 </li>
 </ul>
-<h2>Academic Services</h2>
+<h2>Academic Review Works</h2>
 <ul>
-<li><p>Reviewer, Applied Energy</p>
+<li><p>Applied Energy</p>
 </li>
-<li><p>Reviewer, IEEE Industrial Electronics</p>
+<li><p>IEEE Access</p>
 </li>
-<li><p>Reviewer, IEEE Intelligent Transportation Systems</p>
+<li><p>IEEE Control Systems Letters</p>
 </li>
-<li><p>Reviewer, IEEE Sensors Journal</p>
+<li><p>IEEE Industrial Electronics</p>
 </li>
-<li><p>Reviewer, IEEE Transactions on Smart Grid</p>
+<li><p>IEEE Intelligent Transportation Systems</p>
 </li>
-<li><p>Reivewer, IEEE Transactions on Sustainable Energy</p>
+<li><p>IEEE Sensors Journal</p>
 </li>
-<li><p>Reviewer, Structural Health Monitoring</p>
+<li><p>IEEE Transactions of Power Systems</p>
 </li>
-<li><p>Reviewer, IEEE International Conference on Communications, Controls, and Computing Technology for Smart Grids (IEEE SmartGridComm) at Aalborg, Denmark, Octomber 2018</p>
+<li><p>IEEE Transactions on Neural Networks and Learning Systems</p>
 </li>
-<li><p>Reviewer, IEEE Power Energy Society General Meeting (PES-GM) at Boston, MA, July 2016</p>
+<li><p>IEEE Transactions on Smart Grid</p>
 </li>
-<li><p>Reviewer, International Workshop on Structural Health Monitoring 2015 (IWSHM 2015) at Stanford, CA, September 2015</p>
+<li><p>IEEE Transactions on Sustainable Energy</p>
+</li>
+<li><p>IET Generation, Transmission &amp; Distribution</p>
+</li>
+<li><p>Structural Health Monitoring</p>
+</li>
+<li><p>IEEE International Conference on Communications, Controls, and Computing Technology for Smart Grids (IEEE SmartGridComm) at Aalborg, Denmark, Octomber 2018</p>
+</li>
+<li><p>IEEE Power Energy Society General Meeting (PES-GM) at Boston, MA, July 2016</p>
+</li>
+<li><p>International Workshop on Structural Health Monitoring 2015 (IWSHM 2015) at Stanford, CA, September 2015</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-10-26 07:51:20 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-04-19 00:04:35 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
