--- a/research.html
+++ b/research.html
@@ -27,14 +27,14 @@
 <h2>Publications</h2>
 <h3>Journal</h3>
 <ul>
-<li><p><b>Y. Liao</b>, Y. Weng, C.W. Tan, R. Rajagopal, &ldquo;<a href="pub/CSEE_outage.pdf">Quick Line Outage Identification in Urban Distribution Grids via Smart Meters</a>&rdquo;, <i>CSEE Journal of Power and Energy Systems</i>, accepted, 2021.</p>
+<li><p><b>Y. Liao</b>, Y. Weng, C.W. Tan, R. Rajagopal, &ldquo;<a href="pub/CSEE_outage.pdf">Quick Line Outage Identification in Urban Distribution Grids via Smart Meters</a>&rdquo;, <i>CSEE Journal of Power and Energy Systems</i>, Nov 2021, DOI: 10.17775/CSEEJPES.2020.04640.</p>
 </li>
 <li><p>H. Li, Y. Weng, <b>Y. Liao</b>, B. Keel, K. E. Brown, &ldquo;<a href="pub/2021IJPES-Top.pdf">Distribution grid impedance &amp; topology estimation with limited or no micro-PMUs</a>&rdquo;, <i>International Journal of Electrical Power &amp; Energy Systems</i>, 129: 106794, 2021, DOI: 10.1016/j.ijepes.2021.106794.</p>
 </li>
 <li><p><b>Y. Liao</b>, A.S. Kiremidjian, R. Rajagopal, C.H. Loh, &ldquo;<a href="pub/IJSMSS.pdf">Application of Vibration-based Damage Detection Algorithms to
-Experimental Data from Multi-story Steel Structures</a>&rdquo;, <i>International Journal of Sustainable Materials and Structural Systems, Speicial Issue: Smart Structures, Structural Control and Health Monitoring – A Special Issue in Honour of Professor Fabio Casciati and Professor Lucia Faravelli</i>, accepted.</p>
+Experimental Data from Multi-story Steel Structures</a>&rdquo;, <i>International Journal of Sustainable Materials and Structural Systems, Speicial Issue: Smart Structures, Structural Control and Health Monitoring – A Special Issue in Honour of Professor Fabio Casciati and Professor Lucia Faravelli</i>, vol.4 No.2<i>3</i>4, 199-226, Aug 2020, DOI: 0.1504/IJSMSS.2020.10031277.</p>
 </li>
-<li><p><b>Y. Liao</b>, Y. Weng, G. Liu, Z. Zhao, C.W. Tan, R. Rajagopal, &ldquo;<a href="pub/IET_three_phase.pdf">Unbalanced Multi-Phase Distribution Grid Topology Estimation and Bus Phase Identification</a>&rdquo;, <i>IET Smart Grid</i>, 2: 557-570, 2019, DOI: 10.1049/iet-stg.2018.0291.</p>
+<li><p><b>Y. Liao</b>, Y. Weng, G. Liu, Z. Zhao, C.W. Tan, R. Rajagopal, &ldquo;<a href="https://ietresearch.onlinelibrary.wiley.com/doi/pdfdirect/10.1049/iet-stg.2018.0291Unbalanced">Multi-Phase Distribution Grid Topology Estimation and Bus Phase Identification</a>&rdquo;, <i>IET Smart Grid</i>, 2: 557-570, 2019, DOI: 10.1049/iet-stg.2018.0291.</p>
 </li>
 <li><p><b>Y. Liao</b>, A.S. Kiremidjian, R. Rajagopal, C.H. Loh, &ldquo;<a href="pub/ASCE.pdf">Structural Damage Detection and Localization with Unknown Post-Damage Feature Distribution Using Sequential Change-Point Detection Method</a>&rdquo;, <i>ASCE Journal of Aerospace Engineering</i>, 32(2): 04018149, 2018, DOI: 10.1061/(ASCE)AS.1943-5525.0000979.</p>
 </li>
@@ -47,6 +47,8 @@ Experimental Data from Multi-story Steel Structures</a>&rdquo;, <i>International
 </ul>
 <h3>Conference</h3>
 <ul>
+<li><p><b>Y. Liao</b>, C. Xiao, Y. Weng, &ldquo;<a href="https://ieeexplore.ieee.org/abstract/document/9916593">Quickest Line Outage Detection with Low False Alarm Rate and No Prior Outage Knowledge</a>&rdquo;, <i>2022 IEEE Power and Energy Society General Meeting (PES-GM 2022)</i> at Dever, CO, USA, July 2022. [<b>Best Papers</b>]</p>
+</li>
 <li><p><b>Y. Liao</b>, A.S. Kiremidjian, R. Rajagopal, C.H. Loh, &ldquo;Experimental Validation of an Improved Dynamic Displacement Estimation Method using Accelerometer and Gyroscope&rdquo;, <i>International Workshop on Structural Health Monitoring (IWSHM2017)</i> at Stanford, CA, September 2017.</p>
 </li>
 <li><p>S.K. Huang, <b>Y. Liao</b>, C.M. Chang, C.H. Loh, A.S. Kiremidjian, R. Rajagopal, &ldquo;Use of Time-frequency Damage Sensitive Features for Structural Damage Diagnosis&rdquo;, <i>International Workshop on Structural Health Monitoring (IWSHM2017)</i> at Stanford, CA, September 2017.</p>
@@ -132,19 +134,15 @@ Experimental Data from Multi-story Steel Structures</a>&rdquo;, <i>International
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-04-19 00:04:35 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-12-11 23:43:50 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
 </tr>
 </table>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XBXEL2V7LD"></script>
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-40776454-1', 'stanford.edu');
-  ga('send', 'pageview');
-</script>
-</body>
-</html>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
