--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 <div id="toptitle">
 <h1>Yizheng Liao</h1>
 </div>
-<p>I am a Visiting Scholar in the <a href="http://cee.stanford.edu/">Department of Civil and Environmental Engineering</a> at
-<a href="http://www.stanford.edu/">Stanford University</a>. Also, I am a Data Scientist (Algorithms) working on Search Ranking, Monetization, and Experimentation at Airbnb. At Stanford, I am working with <a href="http://web.stanford.edu/~ramr/">Prof. Ram Rajagopal</a> and <a href="https://profiles.stanford.edu/anne-kiremidjian">Prof. Anne S. Kiremidjian</a>.</p>
+<p>I am currently a software engineer at <a href="http://www.ziphq.com">Zip</a>. I am also visiting <a href="http://cee.stanford.edu/">Department of Civil and Environmental Engineering</a> (<a href="http://web.stanford.edu/~ramr/">Prof. Ram Rajagopal</a> and <a href="https://profiles.stanford.edu/anne-kiremidjian">Prof. Anne S. Kiremidjian</a>) at
+<a href="http://www.stanford.edu/">Stanford University</a> and <a href="https://ecee.engineering.asu.edu/">School of Electrical, Computer and Energy Engineering</a> (<a href="https://www.public.asu.edu/~yweng2/">Prof. Yang Weng</a>) at <a href="http://www.asu.edu">Arizona State University</a>. 
+Previously, I was a Machine Learning Engineer at Airbnb.</p>
 <h2>Research Interest</h2>
 <ul>
 <li><p>Urban System and Infrastructure System</p>
@@ -42,31 +43,27 @@
 </ul>
 <h2>Recent News</h2>
 <ul>
-<li><p><b>April 2021</b>: Our paper &ldquo;Quick Line Outage Identification in Urban Distribution Grids via Smart Meters&rdquo; has been accpeted by CSEE Journal of Power and Energy Systems.</p>
+<li><p><b>Jul 2022</b>: Our paper &ldquo;Quickest Line Outage Detection with Low False Alarm Rate and No Prior Outage Knowledge&rdquo; is selected as <b>Best Papers</b> of 2022 IEEE Power and Energy Scoiety General Meeting.</p>
 </li>
-<li><p><b>January 2021</b>: Our paper &ldquo;Distribution grid impedance &amp; topology estimation with limited or no micro-PMUs&rdquo; has been accepted by the International Journal of Electrical Power &amp; Energy Systems.</p>
-</li>
-<li><p><b>October 2019</b>: Our paper &ldquo;Application of Vibration-based Damage Detection Algorithms to
-Experimental Data from Multi-story Steel Structures&rdquo; has been accepted by the International Journal of Sustainable Materials and Structural Systems.</p>
+<li><p><b>Nov 2021</b>: Our paper &ldquo;Quick Line Outage Identification in Urban Distribution Grids via Smart Meters&rdquo; has been accepted by CSEE Journal of Power and Energy Systems.
+
+
+Experimental Data from Multi-story Steel Structures" has been accepted by the International Journal of Sustainable Materials and Structural Systems.</p>
 </li>
 </ul>
 <h2>Contact</h2>
-<p>Email: <a href="mailto:yzliao@stanford.edu">yzliao@stanford.edu</a></p>
+<p>Email: <a href="mailto:yzliao@asu.edu">yzliao@asu.edu</a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-04-19 00:04:35 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-12-11 23:43:50 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
 </tr>
 </table>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XBXEL2V7LD"></script>
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-40776454-1', 'stanford.edu');
-  ga('send', 'pageview');
-</script>
-</body>
-</html>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
