--- a/research.html
+++ b/research.html
@@ -25,9 +25,12 @@
 </div>
 <p><a href="https://scholar.google.com/citations?hl=en&amp;user=1qA9DswAAAAJ&amp;view_op=list_works">Google Scholar</a></p>
 <h2>Publications</h2>
+<p>(<tt>Name</tt> represents the corresponding author)</p>
 <h3>Journal</h3>
 <ul>
-<li><p><b>Y. Liao</b>, Y. Weng, C.W. Tan, R. Rajagopal, &ldquo;<a href="pub/CSEE_outage.pdf">Quick Line Outage Identification in Urban Distribution Grids via Smart Meters</a>&rdquo;, <i>CSEE Journal of Power and Energy Systems</i>, Nov 2021, DOI: 10.17775/CSEEJPES.2020.04640.</p>
+<li><p>C. Xiao, <tt><b>Y. Liao</b></tt>, <tt>Y. Weng</tt>, &ldquo;<a href="pub/TPS_outage_PGD.pdf">Distribution Grid Line Outage Identification with Unknown Pattern and Performance Guarantee</a>&rdquo;, <i>IEEE Transactions on Power Systems</i>, accepted.</p>
+</li>
+<li><p><b>Y. Liao</b>, Y. Weng, C. W. Tan, R. Rajagopal, &ldquo;<a href="pub/CSEE_outage.pdf">Quick Line Outage Identification in Urban Distribution Grids via Smart Meters</a>&rdquo;, <i>CSEE Journal of Power and Energy Systems</i>, Nov 2021, DOI: 10.17775/CSEEJPES.2020.04640.</p>
 </li>
 <li><p>H. Li, Y. Weng, <b>Y. Liao</b>, B. Keel, K. E. Brown, &ldquo;<a href="pub/2021IJPES-Top.pdf">Distribution grid impedance &amp; topology estimation with limited or no micro-PMUs</a>&rdquo;, <i>International Journal of Electrical Power &amp; Energy Systems</i>, 129: 106794, 2021, DOI: 10.1016/j.ijepes.2021.106794.</p>
 </li>
@@ -47,6 +50,8 @@ Experimental Data from Multi-story Steel Structures</a>&rdquo;, <i>International
 </ul>
 <h3>Conference</h3>
 <ul>
+<li><p>C. Xiao, <tt><b>Y. Liao</b></tt>, <tt>Y. Weng</tt>, &ldquo;<a href="pub/PES_GM2023.pdf">Distribution Grid Line Outage Detection with Privacy Data</a>&rdquo;, <i>2023 IEEE Power and Energy Society General Meeting (PES-GM 2023)</i> at Orlando, FL, USA, July 2023.</p>
+</li>
 <li><p><b>Y. Liao</b>, C. Xiao, Y. Weng, &ldquo;<a href="https://ieeexplore.ieee.org/abstract/document/9916593">Quickest Line Outage Detection with Low False Alarm Rate and No Prior Outage Knowledge</a>&rdquo;, <i>2022 IEEE Power and Energy Society General Meeting (PES-GM 2022)</i> at Dever, CO, USA, July 2022. [<b>Best Papers</b>]</p>
 </li>
 <li><p><b>Y. Liao</b>, A.S. Kiremidjian, R. Rajagopal, C.H. Loh, &ldquo;Experimental Validation of an Improved Dynamic Displacement Estimation Method using Accelerometer and Gyroscope&rdquo;, <i>International Workshop on Structural Health Monitoring (IWSHM2017)</i> at Stanford, CA, September 2017.</p>
@@ -134,7 +139,7 @@ Experimental Data from Multi-story Steel Structures</a>&rdquo;, <i>International
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-12-11 23:43:50 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-09-10 14:46:52 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
