--- a/education.html
+++ b/education.html
@@ -83,7 +83,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-12-11 23:43:50 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-09-10 14:46:52 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
