--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div id="toptitle">
 <h1>Yizheng Liao</h1>
 </div>
-<p>I am currently a software engineer at <a href="http://www.ziphq.com">Zip</a>. I am also visiting <a href="http://cee.stanford.edu/">Department of Civil and Environmental Engineering</a> (<a href="http://web.stanford.edu/~ramr/">Prof. Ram Rajagopal</a> and <a href="https://profiles.stanford.edu/anne-kiremidjian">Prof. Anne S. Kiremidjian</a>) at
+<p>I am currently the engineering manager of Data and AI team at <a href="http://www.ziphq.com">Zip</a>. I am also visiting <a href="http://cee.stanford.edu/">Department of Civil and Environmental Engineering</a> (<a href="http://web.stanford.edu/~ramr/">Prof. Ram Rajagopal</a> and <a href="https://profiles.stanford.edu/anne-kiremidjian">Prof. Anne S. Kiremidjian</a>) at
 <a href="http://www.stanford.edu/">Stanford University</a> and <a href="https://ecee.engineering.asu.edu/">School of Electrical, Computer and Energy Engineering</a> (<a href="https://www.public.asu.edu/~yweng2/">Prof. Yang Weng</a>) at <a href="http://www.asu.edu">Arizona State University</a>. 
 Previously, I was a Machine Learning Engineer at Airbnb.</p>
 <h2>Research Interest</h2>
@@ -43,19 +43,18 @@ Previously, I was a Machine Learning Engineer at Airbnb.</p>
 </ul>
 <h2>Recent News</h2>
 <ul>
-<li><p><b>Jul 2022</b>: Our paper &ldquo;Quickest Line Outage Detection with Low False Alarm Rate and No Prior Outage Knowledge&rdquo; is selected as <b>Best Papers</b> of 2022 IEEE Power and Energy Scoiety General Meeting.</p>
+<li><p><b>Aug 2023</b>: Our paper &ldquo;Distribution Grid Line Outage Identification with Unknown Pattern and Performance Guarantee&rdquo; has been accepted by IEEE Transactions on Power Systems. Check out (<a href="pub/TPS_outage_PGD.pdf">manuscript</a>).</p>
 </li>
-<li><p><b>Nov 2021</b>: Our paper &ldquo;Quick Line Outage Identification in Urban Distribution Grids via Smart Meters&rdquo; has been accepted by CSEE Journal of Power and Energy Systems.
-
-
-Experimental Data from Multi-story Steel Structures" has been accepted by the International Journal of Sustainable Materials and Structural Systems.</p>
+<li><p><b>Jul 2023</b>: Our paper &ldquo;Distribution Grid Line Outage Detection with Privacy Data&rdquo; is presented at 2023 IEEE Power and Energy Scoiety General Meeting. (<a href="pub/PES_GM2023.pdf">manuscript</a>).</p>
+</li>
+<li><p><b>Jul 2022</b>: Our paper &ldquo;Quickest Line Outage Detection with Low False Alarm Rate and No Prior Outage Knowledge&rdquo; is selected as <b>Best Papers</b> of 2022 IEEE Power and Energy Scoiety General Meeting. (<a href="https://ieeexplore.ieee.org/abstract/document/9916593">manuscript</a>)</p>
 </li>
 </ul>
 <h2>Contact</h2>
 <p>Email: <a href="mailto:yzliao@asu.edu">yzliao@asu.edu</a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-12-11 23:43:50 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-09-10 14:46:52 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
