--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ Previously, I was a Machine Learning Engineer at Airbnb.</p>
 </ul>
 <h2>Recent News</h2>
 <ul>
-<li><p><b>Aug 2023</b>: Our paper &ldquo;Distribution Grid Line Outage Identification with Unknown Pattern and Performance Guarantee&rdquo; has been accepted by IEEE Transactions on Power Systems. Check out (<a href="pub/TPS_outage_PGD.pdf">manuscript</a>).</p>
+<li><p><b>Aug 2023</b>: Our paper &ldquo;Distribution Grid Line Outage Identification with Unknown Pattern and Performance Guarantee&rdquo; has been accepted by IEEE Transactions on Power Systems. Check out (<a href="https://ieeexplore.ieee.org/abstract/document/10262364">manuscript</a>).</p>
 </li>
-<li><p><b>Jul 2023</b>: Our paper &ldquo;Distribution Grid Line Outage Detection with Privacy Data&rdquo; is presented at 2023 IEEE Power and Energy Scoiety General Meeting. (<a href="pub/PES_GM2023.pdf">manuscript</a>).</p>
+<li><p><b>Jul 2023</b>: Our paper &ldquo;Distribution Grid Line Outage Detection with Privacy Data&rdquo; is presented at 2023 IEEE Power and Energy Scoiety General Meeting. (<a href="https://arxiv.org/abs/2309.05140">manuscript</a>).</p>
 </li>
 <li><p><b>Jul 2022</b>: Our paper &ldquo;Quickest Line Outage Detection with Low False Alarm Rate and No Prior Outage Knowledge&rdquo; is selected as <b>Best Papers</b> of 2022 IEEE Power and Energy Scoiety General Meeting. (<a href="https://ieeexplore.ieee.org/abstract/document/9916593">manuscript</a>)</p>
 </li>
@@ -54,7 +54,7 @@ Previously, I was a Machine Learning Engineer at Airbnb.</p>
 <p>Email: <a href="mailto:yzliao@asu.edu">yzliao@asu.edu</a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-09-10 14:46:52 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-09-30 13:36:22 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
