--- a/research.html
+++ b/research.html
@@ -28,7 +28,7 @@
 <p>(<tt>Name</tt> represents the corresponding author)</p>
 <h3>Journal</h3>
 <ul>
-<li><p>C. Xiao, <tt><b>Y. Liao</b></tt>, <tt>Y. Weng</tt>, &ldquo;<a href="pub/TPS_outage_PGD.pdf">Distribution Grid Line Outage Identification with Unknown Pattern and Performance Guarantee</a>&rdquo;, <i>IEEE Transactions on Power Systems</i>, accepted.</p>
+<li><p>C. Xiao, <tt><b>Y. Liao</b></tt>, <tt>Y. Weng</tt>, &ldquo;<a href="https://ieeexplore.ieee.org/abstract/document/10262364">Distribution Grid Line Outage Identification with Unknown Pattern and Performance Guarantee</a>&rdquo;, <i>IEEE Transactions on Power Systems</i>, early access, DOI: 10.1109/TPWRS.2023.3314708.</p>
 </li>
 <li><p><b>Y. Liao</b>, Y. Weng, C. W. Tan, R. Rajagopal, &ldquo;<a href="pub/CSEE_outage.pdf">Quick Line Outage Identification in Urban Distribution Grids via Smart Meters</a>&rdquo;, <i>CSEE Journal of Power and Energy Systems</i>, Nov 2021, DOI: 10.17775/CSEEJPES.2020.04640.</p>
 </li>
@@ -50,7 +50,7 @@ Experimental Data from Multi-story Steel Structures</a>&rdquo;, <i>International
 </ul>
 <h3>Conference</h3>
 <ul>
-<li><p>C. Xiao, <tt><b>Y. Liao</b></tt>, <tt>Y. Weng</tt>, &ldquo;<a href="pub/PES_GM2023.pdf">Distribution Grid Line Outage Detection with Privacy Data</a>&rdquo;, <i>2023 IEEE Power and Energy Society General Meeting (PES-GM 2023)</i> at Orlando, FL, USA, July 2023.</p>
+<li><p>C. Xiao, <tt><b>Y. Liao</b></tt>, <tt>Y. Weng</tt>, &ldquo;<a href="https://arxiv.org/abs/2309.05140">Distribution Grid Line Outage Detection with Privacy Data</a>&rdquo;, <i>2023 IEEE Power and Energy Society General Meeting (PES-GM 2023)</i> at Orlando, FL, USA, July 2023.</p>
 </li>
 <li><p><b>Y. Liao</b>, C. Xiao, Y. Weng, &ldquo;<a href="https://ieeexplore.ieee.org/abstract/document/9916593">Quickest Line Outage Detection with Low False Alarm Rate and No Prior Outage Knowledge</a>&rdquo;, <i>2022 IEEE Power and Energy Society General Meeting (PES-GM 2022)</i> at Dever, CO, USA, July 2022. [<b>Best Papers</b>]</p>
 </li>
@@ -139,7 +139,7 @@ Experimental Data from Multi-story Steel Structures</a>&rdquo;, <i>International
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-09-10 14:46:52 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-09-30 13:36:22 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
