--- a/project.html
+++ b/project.html
@@ -7,6 +7,14 @@
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <title>Project</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XBXEL2V7LD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-XBXEL2V7LD');
+</script>
 <body>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
@@ -58,15 +66,11 @@ of No-Prop is simpler than that of Back Propagation (Back-Prop) model. In additi
 <p>[<a href="https://github.com/yzliao/NPNetwork/">Github Repo</a>] [<a href="http://linkinghub.elsevier.com/retrieve/pii/S0893-6080(12)00261-4">Paper</a>]</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-05 07:44:48 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-10-05 07:51:43 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
 </tr>
 </table>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XBXEL2V7LD"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+</body>
+</html>
