--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <title>Yizheng Liao</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XBXEL2V7LD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-XBXEL2V7LD');
+</script>
 <body>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
@@ -52,15 +60,11 @@ Previously, I was a Machine Learning Engineer at Airbnb.</p>
 <p>Email: <a href="mailto:yzliao@asu.edu">yzliao@asu.edu</a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-05 07:44:48 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-10-05 07:51:42 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
 </tr>
 </table>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XBXEL2V7LD"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+</body>
+</html>
