--- a/research.html
+++ b/research.html
@@ -33,10 +33,10 @@
 </div>
 <p><a href="https://scholar.google.com/citations?hl=en&amp;user=1qA9DswAAAAJ&amp;view_op=list_works">Google Scholar</a></p>
 <h2>Publications</h2>
-<p>(<tt>Name</tt> represents the corresponding author)</p>
+<p>(asterisk represents the corresponding author)</p>
 <h3>Journal</h3>
 <ul>
-<li><p>C. Xiao, <tt><b>Y. Liao</b></tt>, <tt>Y. Weng</tt>, &ldquo;<a href="https://ieeexplore.ieee.org/abstract/document/10262364">Distribution Grid Line Outage Identification with Unknown Pattern and Performance Guarantee</a>&rdquo;, <i>IEEE Transactions on Power Systems</i>, early access, DOI: 10.1109/TPWRS.2023.3314708.</p>
+<li><p>C. Xiao, <b>Y. Liao*</b>, Y. Weng*, &ldquo;<a href="https://ieeexplore.ieee.org/abstract/document/10262364">Distribution Grid Line Outage Identification with Unknown Pattern and Performance Guarantee</a>&rdquo;, <i>IEEE Transactions on Power Systems</i>, early access, DOI: 10.1109/TPWRS.2023.3314708.</p>
 </li>
 <li><p><b>Y. Liao</b>, Y. Weng, C. W. Tan, R. Rajagopal, &ldquo;<a href="pub/CSEE_outage.pdf">Quick Line Outage Identification in Urban Distribution Grids via Smart Meters</a>&rdquo;, <i>CSEE Journal of Power and Energy Systems</i>, Nov 2021, DOI: 10.17775/CSEEJPES.2020.04640.</p>
 </li>
@@ -145,7 +145,7 @@ Experimental Data from Multi-story Steel Structures</a>&rdquo;, <i>International
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-05 07:51:43 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-10-05 07:55:58 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
