--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 <title>Yizheng Liao</title>
 </head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XBXEL2V7LD"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GGW4XE1PWH"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-XBXEL2V7LD');
-</script>
+  gtag('config', 'G-GGW4XE1PWH');</script>
 <body>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
@@ -51,6 +50,8 @@ Previously, I was a Machine Learning Engineer at Airbnb.</p>
 </ul>
 <h2>Recent News</h2>
 <ul>
+<li><p><b>Jun 2024</b>: Our paper &ldquo;Privacy-Preserving Line Outage Detection in Distribution Grids: An Efficient Approach with Uncompromised Performance&rdquo; has been accepted by IEEE Transactions on Power Systems. (<a href="https://arxiv.org/abs/2309.05140">manuscript</a>)</p>
+</li>
 <li><p><b>Aug 2023</b>: Our paper &ldquo;Distribution Grid Line Outage Identification with Unknown Pattern and Performance Guarantee&rdquo; has been accepted by IEEE Transactions on Power Systems. Check out (<a href="https://ieeexplore.ieee.org/abstract/document/10262364">manuscript</a>).</p>
 </li>
 <li><p><b>Jul 2022</b>: Our paper &ldquo;Quickest Line Outage Detection with Low False Alarm Rate and No Prior Outage Knowledge&rdquo; is selected as <b>Best Papers</b> of 2022 IEEE Power and Energy Scoiety General Meeting. (<a href="https://ieeexplore.ieee.org/abstract/document/9916593">manuscript</a>)</p>
@@ -60,7 +61,7 @@ Previously, I was a Machine Learning Engineer at Airbnb.</p>
 <p>Email: <a href="mailto:yzliao@asu.edu">yzliao@asu.edu</a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-05 07:55:58 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-06-16 13:11:35 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
