--- a/research.html
+++ b/research.html
@@ -8,13 +8,12 @@
 <title>Publications and Talks</title>
 </head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XBXEL2V7LD"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GGW4XE1PWH"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-XBXEL2V7LD');
-</script>
+  gtag('config', 'G-GGW4XE1PWH');</script>
 <body>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
@@ -36,7 +35,9 @@
 <p>(asterisk represents the corresponding author)</p>
 <h3>Journal</h3>
 <ul>
-<li><p>C. Xiao, <b>Y. Liao*</b>, Y. Weng*, &ldquo;<a href="https://ieeexplore.ieee.org/abstract/document/10262364">Distribution Grid Line Outage Identification with Unknown Pattern and Performance Guarantee</a>&rdquo;, <i>IEEE Transactions on Power Systems</i>, early access, DOI: 10.1109/TPWRS.2023.3314708.</p>
+<li><p>C. Xiao, <b>Y. Liao*</b>, Y. Weng*, &ldquo;<a href="https://ieeexplore.ieee.org/abstract/document/10552189">Privacy-Preserving Line Outage Detection in Distribution Grids: An Efficient Approach with Uncompromised Performance</a>&rdquo;, <i>IEEE Transactions on Power Systems</i>, early access, DOI: 10.1109/TPWRS.2024.3411023 (<a href="https://arxiv.org/abs/2309.05140">Manuscript</a>).</p>
+</li>
+<li><p>C. Xiao, <b>Y. Liao*</b>, Y. Weng*, &ldquo;<a href="https://ieeexplore.ieee.org/abstract/document/10262364">Distribution Grid Line Outage Identification with Unknown Pattern and Performance Guarantee</a>&rdquo;, <i>IEEE Transactions on Power Systems</i>, March 2024, DOI: 10.1109/TPWRS.2023.3314708.</p>
 </li>
 <li><p><b>Y. Liao</b>, Y. Weng, C. W. Tan, R. Rajagopal, &ldquo;<a href="pub/CSEE_outage.pdf">Quick Line Outage Identification in Urban Distribution Grids via Smart Meters</a>&rdquo;, <i>CSEE Journal of Power and Energy Systems</i>, Nov 2021, DOI: 10.17775/CSEEJPES.2020.04640.</p>
 </li>
@@ -145,7 +146,7 @@ Experimental Data from Multi-story Steel Structures</a>&rdquo;, <i>International
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-05 07:55:58 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-06-16 13:11:36 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
