--- a/project.html
+++ b/project.html
@@ -8,13 +8,12 @@
 <title>Project</title>
 </head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XBXEL2V7LD"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GGW4XE1PWH"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-XBXEL2V7LD');
-</script>
+  gtag('config', 'G-GGW4XE1PWH');</script>
 <body>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
@@ -66,7 +65,7 @@ of No-Prop is simpler than that of Back Propagation (Back-Prop) model. In additi
 <p>[<a href="https://github.com/yzliao/NPNetwork/">Github Repo</a>] [<a href="http://linkinghub.elsevier.com/retrieve/pii/S0893-6080(12)00261-4">Paper</a>]</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-05 07:55:58 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-06-16 13:11:36 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
