--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
   gtag('config', 'G-GGW4XE1PWH');</script>
+<meta name="google-site-verification" content="WZ6YhBKQ2JZCuuCOlF5xM61pSU-YLh9Q8ioxi-15UGI" />
 <body>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
@@ -52,7 +53,7 @@ Previously, I was a Machine Learning Engineer at Airbnb.</p>
 <ul>
 <li><p><b>Jun 2024</b>: Our paper &ldquo;Privacy-Preserving Line Outage Detection in Distribution Grids: An Efficient Approach with Uncompromised Performance&rdquo; has been accepted by IEEE Transactions on Power Systems. (<a href="https://arxiv.org/abs/2309.05140">manuscript</a>)</p>
 </li>
-<li><p><b>Aug 2023</b>: Our paper &ldquo;Distribution Grid Line Outage Identification with Unknown Pattern and Performance Guarantee&rdquo; has been accepted by IEEE Transactions on Power Systems. Check out (<a href="https://ieeexplore.ieee.org/abstract/document/10262364">manuscript</a>).</p>
+<li><p><b>Aug 2023</b>: Our paper &ldquo;Distribution Grid Line Outage Identification with Unknown Pattern and Performance Guarantee&rdquo; has been accepted by IEEE Transactions on Power Systems. (<a href="https://ieeexplore.ieee.org/abstract/document/10262364">manuscript</a>).</p>
 </li>
 <li><p><b>Jul 2022</b>: Our paper &ldquo;Quickest Line Outage Detection with Low False Alarm Rate and No Prior Outage Knowledge&rdquo; is selected as <b>Best Papers</b> of 2022 IEEE Power and Energy Scoiety General Meeting. (<a href="https://ieeexplore.ieee.org/abstract/document/9916593">manuscript</a>)</p>
 </li>
@@ -61,7 +62,7 @@ Previously, I was a Machine Learning Engineer at Airbnb.</p>
 <p>Email: <a href="mailto:yzliao@asu.edu">yzliao@asu.edu</a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-06-16 13:11:35 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-07-12 13:46:56 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
