--- a/project.html
+++ b/project.html
@@ -14,6 +14,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
   gtag('config', 'G-GGW4XE1PWH');</script>
+<meta name="google-site-verification" content="WZ6YhBKQ2JZCuuCOlF5xM61pSU-YLh9Q8ioxi-15UGI" />
 <body>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
@@ -65,7 +66,7 @@ of No-Prop is simpler than that of Back Propagation (Back-Prop) model. In additi
 <p>[<a href="https://github.com/yzliao/NPNetwork/">Github Repo</a>] [<a href="http://linkinghub.elsevier.com/retrieve/pii/S0893-6080(12)00261-4">Paper</a>]</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-06-16 13:11:36 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-07-12 13:46:56 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
